# Demo

./: .gitignore  README.md  flake.nix
c++/calc/: test.cc  test1.cc
c++/func/: test.cc  test1.cc
c++/io/: insert.cc  load_data.cc  print_files.cc  read_csv.cc  stream.cc  test.cc
c++/namespace/: array.cc  array_test  array_test.cpp  binary_search.cc  calc.cpp  test.cc  vector.cc
c++/person/: person.cc
c++/sales/: Sales_data.cc  Sales_data.h  sales_dada.cc
c++/screen/: screen.cc  screen.h  test.cc  test_7_43.cc
c++/type/: point.cc  test.cc
code/conc/: select.c
code/ecf/: fork.c  forkprob0.c  myecho.c  procmask1.c  procmask2.c  sigint1.c  signal2.c  signalprob0.c  snooze.c  waitpid1.c  waitprob1.c
code/include/: csapp.c  csapp.h
code/io/: readdir.c
code/netp/: hex2dd.c
code/netp/tiny/: tiny.c
code/test/: open_file.c
crtp/: base.cpp
demo/: CMakeLists.txt  const_cast.cpp  copy.cc  destoryed.cpp  dynamic_cast.cpp  erase.cpp  except.cpp  foo.cpp  func.cpp  generic.cpp  lambda.cc  map.cpp  maxSubArray.cc  multimap.cpp  operator.cpp  pair.cpp  print.cpp  ranges.cc  reinterpret_cast.cpp  set.cpp  sfinae.cpp  shared_ptr.cpp  strvec.cpp  swap.cc  template.cpp  test.cc  thread.cpp  time.cpp  unique_ptr.cpp  vector.cpp  weak_ptr.cpp
demo/StrBlob/: my_strblob.h  use.cpp
demo/quote/: Quote.cpp  Quote.h
exchange/: exchange.s  g
hello/: hello.cc
impl/: my_class.cpp  my_class.h
inplace_swap/: inplace_swap.c
mul-matrix/: matrix.c
mul-test/: main.c  mstore.c
package/EffectiveModernC++/: CMakeLists.txt  async.cc  base.cc  constexpr.cc  dbg.h  deleted.cc  enum.cc  forward.cc  future.cc  promise.cc  shared_ptr.cc  thead.cc  unique_ptr.cc
package/advanced/: CMakeLists.txt  main.cc
package/boost/: CMakeLists.txt  demanagle.cc  main.cc  shape.cc  typeindex.cc
package/http/: CMakeLists.txt  TestCtrl.cc  TestCtrl.h  server.cc
package/json_reader/: CMakeLists.txt  reader.cpp  reader.h
package/modern_cpp/: CMakeLists.txt  RAII.cc  accumlate.cc  array.cc  auto.cc  bin_count.cc  complex.cc  contextpr.cc  copy_elision.cc  decltype.cc  factorial.cc  filter_view.cc  future_async.cc  future_packaged_task.cc  future_promise.cc  get_count.cc  hash.cc  istream_line_reader.cc  istream_line_reader.h  iterator.cc  lazy_filter.cc  length.cc  list.cc  magic_number.cc  make_integer_sequence.cc  map.cc  map_template.cc  priority_queue.cc  reordering.cc  sfinae.cc  shape.cc  simple.cc  smart_ptr.cc  sum_template.cc  test.cc  test_func.cc  thread_atomic.cc  thread_test.cc  tuple.cc  vector.cc  (+1 more)
package/spdlog/: CMakeLists.txt  main.cc
package/thread/: CMakeLists.txt  function_pointer.cc  functor.cpp  intro.cpp  join.cc  lambda_function.cc  mutex.cc  thread.cpp
show_bytes/: show_bytes.c
tests/: str_longer.c  sum_elements.c  tadd_ok.c  uadd_ok.c
tutorial/: CMakeLists.txt  MultiCPackConfig.cmake  tutorial.cc  tutorial.h
tutorial/MathFunctions/: CMakeLists.txt  MakeTable.cc  MakeTable.cmake  MathFunctions.cxx  mysqrt.cxx
